section last grid added

--- a/index.html
+++ b/index.html
@@ -51,9 +51,14 @@
                     feature or website. Taka a look of my works. If you like what you see
                     and have a project you need coded, don’t hesitate and contact me.
                 </p>
-                <button class="form-btn margin-xmd ">
+                <!-- <button class="form-btn margin-xmd ">
                     Start collaboration
-                </button>
+                </button> -->
+                <div class="get-started-btn">
+                    <button type="submit" class="form-btn">
+                        Start collaboration
+                    </button>
+                </div>
             </div>
             <div class="header-description-desktop">
                 <div class="header-info-container">
@@ -68,19 +73,13 @@
                             Start collaboration
                         </button>
                     </div>
-
                     <div class="inner-image">
                         <img src="./images/image_dots.png" alt="">
                     </div>
                 </div>
-
                 <div class="top-image-desktop">
                     <img src="./images/desktop.png" alt="">
-
-
                 </div>
-
-
             </div>
         </section>
     </main>
@@ -192,8 +191,6 @@
 
         </div>
         <section>
-
-
             <div class="desktop-version">
                 <div class="desktop-version-projects">
                     <div class="desktop-project-title">
@@ -221,6 +218,71 @@
                         </div>
                     </div>
                 </div>
+                <div class="desktop-version-project-2">
+                    <div class="grid-colun-first">
+                    <div class="desktop-image-small">
+                        <img src="./images//Rectangle 22.png" alt="">
+                    </div>
+                    </div>
+                    <div class="desktop-middle-bg">
+                        <img src="./images/image-geometry_22.png" alt="">
+                    </div>
+                    <div class="desktop-img-container  desktop-img-container-md">
+                        <img src="./images/Rectangle 25.png" alt="">
+
+                        <div class="project-description project-description-small">
+                            <p class="project-name project-name-small ">Project name goes...</p>
+                            <ul class="project-features  project-features-small">
+                                <li class="btn btn-feature">HTML/CSS</li>
+                                <li class="btn btn-feature">Ruby on Rails</li>
+                                <li class="btn btn-feature">+1</li>
+                            </ul>
+                            <div class="view-project">
+                                <a href="">See this Project</a> <span><ion-icon class="icon"
+                                 name="arrow-forward-outline"></ion-icon></span>
+                            </div>
+
+                        </div>
+                    </div>
+
+                   
+
+                  
+
+                </div>
+
+                <div class="desktop-version-project-3">
+                     <div class="desktop-img-big">
+                        <img src="./images/Rectangle 27 (1).png" alt="">
+                    </div>
+                    <div class="rigt-version-section">
+                        <div class="laptop-photo">
+                            <img src="./images/Rectangle 26 (2).png" alt="">
+                        </div>
+                        <div class="desktop-square-bg">
+                            <img src="./images/Group 83.png" alt="">
+                        </div>
+                        <div class="desktop-polygon-bg">
+                            <img src="./images/Shape.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="desktop-version-project-4">
+                    <div>
+                        <div class="image-left">
+                            <img src="./images/image-geometry_5.png" alt="">
+                        </div>
+                        <div class="image-right">
+                            <img src="./images/image-geometry_4.png" alt="">
+                        </div>
+
+                    </div>
+
+                    <div class="desktop-last-img">
+                        <img src="./images/Rectangle 47 (1).png" alt="">
+
+                    </div>
+                </div>
 
 
             </div>
@@ -231,16 +293,16 @@
     <section class="about-section margin-lg">
         <div class="about-section-description">
             <h3 class="about-section-title ">About</h3>
-        <p class="about-text margin-md-sm-b ">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
-            veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea
-            eiusmod
-        </p>
-        <div class="about-section-cv btn-header">
-            <a href="">Get my CV</a>
-            <ion-icon class="cv-icon" name="download-outline"></ion-icon>
-        </div>
+            <p class="about-text margin-md-sm-b ">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+                veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea
+                eiusmod
+            </p>
+            <div class="about-section-cv btn-header">
+                <a href="">Get my CV</a>
+                <ion-icon class="cv-icon" name="download-outline"></ion-icon>
+            </div>
         </div>
         <div class="about-framework">
             <div class="main">
@@ -317,7 +379,7 @@
                     </ul>
 
                     <div class="framework-footer-img">
-                        <img  src="./images/ic_skills.png" alt="image of frame-work symbol" />
+                        <img src="./images/ic_skills.png" alt="image of frame-work symbol" />
                     </div>
                 </div>
             </div>
@@ -334,37 +396,38 @@
             <img src="./images/image-geometry_7.png" alt="" />
         </div>
 
-       <div class="get-started-desktop">
-        <div class="get-started-info">
-            <p>Get started</p>
+        <div class="get-started-desktop">
+            <div class="get-started-info">
+                <p>Get started</p>
 
-            <h3 class="get-started-text margin-sm">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, est!z
-            </h3>
+                <h3 class="get-started-text margin-sm">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                    eiusmod tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet consectetur
+                    adipisicing elit. Ut, est!z
+                </h3>
+            </div>
+            <form action="https://formspree.io/f/mbjelojv" method="POST" class="get-started-form margin-md-sm">
+                <div class="desktop-input">
+                    <div class="form-control-input">
+                        <label for="name">Your name</label>
+                        <input type="text" name="name" required maxlength="30">
+                    </div>
+                    <div class="form-control-input">
+                        <label for="name">Your Email</label>
+                        <input type="email" name="email" required>
+                    </div>
+                </div>
+                <div class="form-control-textarea">
+                    <textarea type="text" id="" rows="10" placeholder="Enter your message here..." maxlength="500"
+                        required></textarea>
+                </div>
+                <div class="get-started-btn">
+                    <button type="submit" class="form-btn">
+                        Start collaboration
+                    </button>
+                </div>
+            </form>
         </div>
-        <form action="https://formspree.io/f/mbjelojv" method="POST" class="get-started-form margin-md-sm">
-           <div class="desktop-input">
-            <div class="form-control-input">
-                <label for="name">Your name</label>
-                <input type="text" name="name" required maxlength="30">
-            </div>
-            <div class="form-control-input">
-                <label for="name">Your Email</label>
-                <input type="email" name="email" required>
-            </div>
-           </div>
-            <div class="form-control-textarea">
-                <textarea type="text" id="" rows="10" placeholder="Enter your message here..." maxlength="500"
-                    required></textarea>
-            </div>
-            <div class="get-started-btn">
-                <button type="submit" class="form-btn">
-                    Start collaboration
-                </button>
-            </div>
-        </form>
-       </div>
 
     </section>
     <footer class="footer-section">
