all necessary images and project section refactor

--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
                     feature or website. Taka a look of my works. If you like what you see
                     and have a project you need coded, don’t hesitate and contact me.
                 </p>
-                <!-- <button class="form-btn margin-xmd ">
-                    Start collaboration
-                </button> -->
                 <div class="get-started-btn">
                     <button type="submit" class="form-btn">
                         Start collaboration
@@ -220,9 +217,9 @@
                 </div>
                 <div class="desktop-version-project-2">
                     <div class="grid-colun-first">
-                    <div class="desktop-image-small">
-                        <img src="./images//Rectangle 22.png" alt="">
-                    </div>
+                        <div class="desktop-image-small">
+                            <img src="./images//Rectangle 22.png" alt="">
+                        </div>
                     </div>
                     <div class="desktop-middle-bg">
                         <img src="./images/image-geometry_22.png" alt="">
@@ -239,20 +236,15 @@
                             </ul>
                             <div class="view-project">
                                 <a href="">See this Project</a> <span><ion-icon class="icon"
-                                 name="arrow-forward-outline"></ion-icon></span>
+                                        name="arrow-forward-outline"></ion-icon></span>
                             </div>
 
                         </div>
                     </div>
-
-                   
-
-                  
-
                 </div>
 
                 <div class="desktop-version-project-3">
-                     <div class="desktop-img-big">
+                    <div class="desktop-img-big">
                         <img src="./images/Rectangle 27 (1).png" alt="">
                     </div>
                     <div class="rigt-version-section">
@@ -268,27 +260,21 @@
                     </div>
                 </div>
                 <div class="desktop-version-project-4">
-                    <div>
+                    <div class="version-project-4-container">
                         <div class="image-left">
                             <img src="./images/image-geometry_5.png" alt="">
                         </div>
                         <div class="image-right">
                             <img src="./images/image-geometry_4.png" alt="">
                         </div>
-
                     </div>
-
                     <div class="desktop-last-img">
                         <img src="./images/Rectangle 47 (1).png" alt="">
 
                     </div>
                 </div>
-
-
             </div>
-
         </section>
-
     </section>
     <section class="about-section margin-lg">
         <div class="about-section-description">
@@ -321,7 +307,7 @@
                         <li class="list-item">
                             <div class="framework-icon"></div><span>CSS</span>
                         </li>
-                        <li class="list-item last">
+                        <li class="list-item last last-list">
                             <div class="framework-icon"></div><span>CSS</span>
                         </li>
                     </ul>
@@ -380,6 +366,18 @@
 
                     <div class="framework-footer-img">
                         <img src="./images/ic_skills.png" alt="image of frame-work symbol" />
+                    </div>
+                </div>
+            </div>
+            <div class="main">
+                <div class="framwork-card card-four">
+
+
+                    <div class="inner-image-desktop">
+                        <img src="./images/image_dots.png" alt="">
+                    </div>
+                    <div class="desktop-square-box">
+                        <img src="./images/Shape_2.png" alt="">
                     </div>
                 </div>
             </div>
