header section fixed as well as the buttons

--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
                 <div class="header-info-container">
                     <div class="header-info-card">
                         <h1 class="header-description-name">Arnold Oghiator </h1>
-                        <p class="header-description-text margin-sm">
+                        <p class="header-description-text">
                             Hello! I am a software developer! I can help you build a product,
                             feature or website. Taka a look of my works. If you like what you see
                             and have a project you need coded, don’t hesitate and contact me.
                         </p>
-                        <button class="form-btn margin-xmd ">
+                        <button class="form-btn mt-info">
                             Start collaboration
                         </button>
                     </div>
@@ -191,7 +191,9 @@
             <div class="desktop-version">
                 <div class="desktop-version-projects">
                     <div class="desktop-project-title">
-                        <h5 class="desktop-project-name">Projects</h5>
+                        <div>
+                            <h5 class="desktop-project-name">Projects</h5>
+                        </div>
 
                         <div class="dots-projects">
                             <img src="./images/image_dots.png" alt="">
@@ -201,8 +203,8 @@
                         <img src="./images/Rectangle 21.png" alt="">
 
                         <div class="project-description">
-                            <p class="project-name ">Project name goes here</p>
-                            <ul class="project-features margin-xsm margin-sm-b ">
+                            <p class="project-name">Project name goes here</p>
+                            <ul class="project-features">
                                 <li class="btn btn-feature">HTML/CSS</li>
                                 <li class="btn btn-feature">Ruby on Rails</li>
                                 <li class="btn btn-feature">JavaScript</li>
@@ -229,7 +231,7 @@
 
                         <div class="project-description project-description-small">
                             <p class="project-name project-name-small ">Project name goes...</p>
-                            <ul class="project-features  project-features-small">
+                            <ul class="  project-features-small">
                                 <li class="btn btn-feature">HTML/CSS</li>
                                 <li class="btn btn-feature">Ruby on Rails</li>
                                 <li class="btn btn-feature">+1</li>
@@ -285,7 +287,7 @@
                 veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ea
                 eiusmod
             </p>
-            <div class="about-section-cv btn-header">
+            <div class="about-section-cv btn-about">
                 <a href="">Get my CV</a>
                 <ion-icon class="cv-icon" name="download-outline"></ion-icon>
             </div>
@@ -346,7 +348,7 @@
             <div class="main">
                 <div class="framwork-card card-three">
                     <p class="framework-name">Skills</p>
-                    <ul class="list-items margin-sm-t">
+                    <ul class="list-items">
                         <li class="list-item">
                             <div class="framework-icon"></div><span>Codekit</span>
                         </li>
@@ -370,7 +372,7 @@
                 </div>
             </div>
             <div class="main">
-                <div class="framwork-card card-four">
+                <div class="card-four">
 
 
                     <div class="inner-image-desktop">
