form section design fix

--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@
 
         <div class="get-started-desktop">
             <div class="get-started-info">
-                <p>Get started</p>
+                <h2>Get started</h2>
 
-                <h3 class="get-started-text margin-sm">
+                <h3 class="get-started-text">
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
                     eiusmod tempor incididunt ut labore et dolore magna. Lorem ipsum dolor sit amet consectetur
                     adipisicing elit. Ut, est!z
@@ -420,6 +420,34 @@
                 <div class="form-control-textarea">
                     <textarea type="text" id="" rows="10" placeholder="Enter your message here..." maxlength="500"
                         required></textarea>
+                </div>
+                <div class="get-started-btn">
+                    <button type="submit" class="form-btn">
+                        Start collaboration
+                    </button>
+                </div>
+            </form>
+            <form action="https://formspree.io/f/mbjelojv" method="POST" class="get-started-form-desktop margin-md-sm">
+                <div class="desktop-input">
+                    <div class="form-control-input-section">
+                        <label for="name">Your name</label>
+                    <div class="form-control-input">
+                        <input type="text" name="name" required maxlength="30">
+                    </div>
+                    </div>
+                    <div class="form-control-input-section">
+                        <label for="name">Your Email</label>
+                    <div class="form-control-input">
+                        <input type="email" name="email" required>
+                    </div>
+                    </div>
+                </div>
+                <div class="textarea-section">
+                    <label for="">Message</label>
+                    <div class="form-control-textarea">
+                        <textarea type="text" id="" rows="10" placeholder="Enter your message here..." maxlength="500"
+                            required></textarea>
+                    </div>
                 </div>
                 <div class="get-started-btn">
                     <button type="submit" class="form-btn">
