--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                 </div>
             </div>
             <div class="main">
-                <div class="card-four">
+                <div class="framwork-card-desktop">
 
 
                     <div class="inner-image-desktop">
