get started section alignment

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
                     </div>
                 </div>
                 <div class="get-started-btn">
-                    <button type="submit" class="form-btn">
+                    <button type="submit" class="form-btn-desktop">
                         Start collaboration
                     </button>
                 </div>
