--- a/index.html
+++ b/index.html
@@ -23,6 +23,25 @@
 <body>
     <main>
         <section>
+            <aside class="sidebar-toggle">
+                
+                <ul class="sidebar-toggle-links">
+                    <li>
+                        <a href="#">Hello</a>
+                    </li>
+                    <li>
+                        <a href="#portfolio">Portfolio</a>
+                    </li>
+                    <li>
+                        <a href="#about">About</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                </ul>
+
+
+            </aside>
             <header class="nav-section grid mobile-nav  grid--2-cols">
 
                 <div class="nav-section-img">
@@ -84,8 +103,8 @@
         <div class="box-image"></div>
     </section>
 
-    <section class="project-section  margin-md-sm">
-        <div class="mobile-version">
+    <section class="project-section  margin-md-sm" id="portfolio">
+        <div class="mobile-version" >
             <h3 class="project-section-title margin-md-sm-b padding-sm">Projects</h3>
 
             <div class="project-description-container grid">
@@ -278,7 +297,7 @@
             </div>
         </section>
     </section>
-    <section class="about-section margin-lg">
+    <section class="about-section margin-lg" id="about">
         <div class="about-section-description">
             <h3 class="about-section-title ">About</h3>
             <p class="about-text margin-md-sm-b ">
@@ -385,7 +404,7 @@
             </div>
         </div>
     </section>
-    <section class="get-started-section">
+    <section class="get-started-section " id="contact">
         <div class="nav-section-img">
             <img src="./images/image_geometry_1.png" alt="" />
         </div>
