html modify, css modified and eslint added

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 
                 <ul class="sidebar-toggle-links">
                     <li class="link-sidebar">
-                        <a href="#">Hello</a>
+                        <a href="#hello">Hello</a>
                     </li>
                     <li class="link-sidebar">
                         <a href="#portfolio">Portfolio</a>
@@ -83,7 +83,7 @@
             </nav>
         </section>
 
-        <section>
+        <section id="hello">
             <div class="header-description margin-md">
                 <h1 class="header-description-name">Arnold Oshos Oghiator </h1>
                 <p class="header-description-text margin-sm">
