eslint error fix

--- a/index.html
+++ b/index.html
@@ -41,16 +41,16 @@
                 
                 <ul class="sidebar-toggle-links">
                     <li class="link-sidebar">
-                        <a href="#hello">Hello</a>
+                        <a class="hamburger-links" href="#hello">Hello</a>
                     </li>
                     <li class="link-sidebar">
-                        <a href="#portfolio">Portfolio</a>
+                        <a class="hamburger-links" href="#portfolio">Portfolio</a>
                     </li>
                     <li class="link-sidebar">
-                        <a href="#about">About</a>
+                        <a class="hamburger-links" href="#about">About</a>
                     </li>
                     <li class="link-sidebar">
-                        <a href="#contact">Contact</a>
+                        <a class="hamburger-links" href="#contact">Contact</a>
                     </li>
                 </ul>
 
